--- a/entity_limit.info.yml
+++ b/entity_limit.info.yml
@@ -1,1 +1,5 @@
-name:'Entity Limit'
+name: 'Entity Limit'
+description: 'Limit allowed content to create for  entities'
+package: 'Entity Limit'
+type: module
+core: 8.x
