Added global configurations for entity limit

--- a/entity_limit.info.yml
+++ b/entity_limit.info.yml
@@ -3,3 +3,5 @@ description: 'Limit allowed content to create for  entities'
 package: 'Entity Limit'
 type: module
 core: 8.x
+
+configure: entity_limit.settings
