Clean up and starting point for the entity limit new schema & form structure.

--- a/entity_limit.routing.yml
+++ b/entity_limit.routing.yml
@@ -1,7 +1,40 @@
-entity.entity_limit.settings:
-  path: '/admin/config/content/entity_limit'
+entity.entity_limit.collection:
+  path: '/admin/structure/entity_limit'
   defaults:
-    _form: 'Drupal\entity_limit\Form\EntityLimitSettingsForm'
-    _title: 'Entity Limit settings'
+    _entity_list: 'entity_limit'
+    _title: 'Entity limit configuration'
   requirements:
     _permission: 'administer entity_limit settings'
+
+entity.entity_limit.add_form:
+  path: '/admin/structure/entity_limit/add'
+  defaults:
+    _entity_form: 'entity_limit.add'
+    _title: 'Add entity limit'
+  requirements:
+    _permission: 'administer entity_limit settings'
+
+entity.entity_limit.add_limits_form:
+  path: '/admin/structure/entity_limit/add/limits'
+  defaults:
+    _entity_form: 'entity_limit.addLimits'
+    _title: 'Add entity limit'
+  requirements:
+    _permission: 'administer entity_limit settings'
+
+entity.entity_limit.edit_form:
+  path: '/admin/structure/entity_limit/{entity_limit}'
+  defaults:
+    _entity_form: 'entity_limit.edit'
+    _title: 'Edit entity limit'
+  requirements:
+    _permission: 'administer entity_limit settings'
+
+entity.entity_limit.delete_form:
+  path: '/admin/structure/entity_limit/{entity_limit}/delete'
+  defaults:
+    _entity_form: 'entity_limit.delete'
+    _title: 'Delete entity limit'
+  requirements:
+    _permission: 'administer entity_limit settings'
+
