Changes in the permissions.yml file.

--- a/entity_limit.permissions.yml
+++ b/entity_limit.permissions.yml
@@ -1,2 +1,2 @@
-'administer entity limit settings':
-  title: Administer Entity Limit Settings
+'administer entity limit':
+  title: Administer Entity Limit
