Changing behaviour of entity limit plugins.

--- a/entity_limit.services.yml
+++ b/entity_limit.services.yml
@@ -4,7 +4,7 @@ services:
     parent: default_plugin_manager
   entity_limit.inspector:
     class: Drupal\entity_limit\EntityLimitInspector
-    arguments: ['@entity.manager', '@entity_limit.usage', '@plugin.manager.entity_limit']
+    arguments: ['@entity.manager', '@plugin.manager.entity_limit']
   entity_limit.usage:
     class: Drupal\entity_limit\EntityLimitUsage
     arguments: ['@entity.manager', '@plugin.manager.entity_limit']
