--- a/entity_limit.info.yml
+++ b/entity_limit.info.yml
@@ -3,3 +3,4 @@ description: 'Allow administrators to restrict the number of entities that may b
 package: 'Entity Limit'
 type: module
 core: 8.x
+configure: entity.entity_limit.collection
